<resources>
    <string name="app_name">GPS Test</string>
    <string name="system_activity_name">System Health Data Viewer</string>
    <string name="location_activity_name">Location Data Viewer</string>
    <string name="service_title_text">SERVICE</string>
    <string name="start_btn_text">Start</string>
    <string name="stop_btn_text">Stop</string>
    <string name="refresh_btn_text">Refresh Files List</string>

    <string name="location_data_files_title">Location Data files</string>
    <string name="system_data_files_title">System Health Data files</string>
    <string name="waypoint_details_text">Waypoint Details:</string>
    <string name="play_route_btn_text">Play Route</string>
    <string name="stop_route_btn_text">Stop</string>
    <string name="waypoints_error_toast">Error. This file contains too many waypoints.</string>
    <string name="network_connectivity_error_title">No Internet Connection</string>
    <string name="network_connectivity_error_message">Internet Connectivity is required to use this feature.</string>
    <string name="network_connectivity_error_positive_btn">OK</string>

    <string name="battery_percentage_title">Battery Percentage</string>
    <string name="signal_strength_title">Cellular Signal Strength</string>
    <string name="network_type_title">Network Type</string>
    <string name="networktype_chart_legend">Y-Axis: \n1 = GSM\n2 = WCDMA\n3 = LTE</string>

    <string name="permissions_dialog_title">Permissions</string>
    <string name="permissions_dialog_message">Allow this app to access your location.</string>
    <string name="permissions_dialog_positive_btn">Grant</string>
    <string name="permissions_dialog_negative_btn">Cancel</string>
    <string name="permissions_granted_toast">Press Start once again to start location service</string>
    <string name="permissions_notgranted_toast">Error. Permissions not granted</string>

    <string name="service_started_toast">Location service started</string>
    <string name="service_running_toast">Service is already running</string>
    <string name="service_stopped_toast">Location service stopped</string>
    <string name="service_not_running">Service not running</string>

    <string name="service_status_running">Status: Running</string>
    <string name="service_status_notrunning">Status: Not running</string>
    <string name="service_timeelapsed_null">Time Elapsed: 00:00:00</string>
    <string name="service_timeelapsed">Time Elapsed: </string>
</resources>
