<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.numadic.test.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/layout_padding">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/layout_padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/layout_padding">

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/view_line_height"
                    android:background="@color/colorViewBackground"/>

                <TextView
                    android:paddingTop="@dimen/title_padding"
                    android:paddingBottom="@dimen/title_padding"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/service_title_text"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/title_textSize"/>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/view_line_height"
                    android:background="@color/colorViewBackground"/>

                <TextView
                    android:paddingTop="@dimen/status_text_paddingTop"
                    android:paddingBottom="@dimen/status_text_paddingBottom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:id="@+id/service_status"
                    android:textSize="@dimen/detail_textSize"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:id="@+id/service_time"
                    android:textSize="@dimen/detail_textSize"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="@dimen/layout_padding"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/start_btn"
                android:onClick="StartButton"
                android:text="@string/start_btn_text"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/stop_btn"
                android:onClick="StopButton"
                android:text="@string/stop_btn_text"/>

        </LinearLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
